--- a/azzinoth-web/src/main/webapp/index.html
+++ b/azzinoth-web/src/main/webapp/index.html
@@ -47,6 +47,10 @@
                         var series = this.series[0],
                                 chart = this;
                         setInterval(function () {
+
+                            var nowTime =  (new Date()).getTime();
+                            var startTime =  (new Date()).getTime() - 1000
+//                            $.post("/azzinoth/queryMethodPerformance",)
                             var x = (new Date()).getTime(), // current time
                                     y = Math.random();
                             series.addPoint([x, y], true, true);
